--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GIBDD-servis</string>
+    <string name="check_driver">Проверка водителя</string>
+    <string name="choose_service">Выберите сервис</string>
+    <string name="btn_check">Проверить</string>
 </resources>
