--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">GIBDD-servis</string>
     <string name="check_driver">Проверка водителя</string>
-    <string name="check_car">Проверка машины</string>
+    <string name="check_auto">Проверка машины</string>
     <string name="choose_service">Выберите сервис</string>
     <string name="btn_check">Проверить</string>
     <string name="check_fine">Проверка штрафов</string>
