added result pages + land +button color and shades

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="capture_picture_btn">Проверить</string>
     <string name="image_preview">image preview</string>
     <string name="camera_detection">Распознование</string>
+    <string name="btn_back">BACK</string>
     <string-array name="check_type">
         <item>Проверка истории регистрации в ГИБДД</item>
         <item>Проверка нахождения в розыске</item>
