отображение результата обработки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,13 +14,16 @@
     <string name="btn_back">BACK</string>
     <string name="label_result">результат</string>
     <string name="label_color">цвет</string>
+    <string name="label_engine_number">номер двигателя</string>
+    <string name="label_engine_volume">объем двигателя</string>
     <string name="label_body_number">номер</string>
     <string name="label_year">год</string>
     <string name="label_vin">vin</string>
     <string name="label_model">модель</string>
     <string name="label_category">категория</string>
     <string name="label_type">тип</string>
-    <string name="label_power_kwt">повер квт</string>
+    <string name="label_power_kwt">Мощность кВт</string>
+    <string name="label_power_hp">Мощность л.с.</string>
     <string-array name="check_type">
         <item>Проверка истории регистрации в ГИБДД</item>
         <item>Проверка нахождения в розыске</item>
