--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="number_license_label">Номер водительского удостоверения</string>
     <string name="number_license_hint">000000</string>
     <string name="date_of_issue_edit_value">27.11.2016</string>
+    <string name="internet_not_available">Интернет не доступен</string>
 </resources>
